--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "version": "6.1.0"
   },
   "dependencies": {
+    "@waline/hexo-next": "^2.0.6",
     "hexo": "^6.0.0",
     "hexo-deployer-git": "^3.0.0",
     "hexo-generator-archive": "^1.0.0",
